--- a/config/packages/admin/entities/gigs.yaml
+++ b/config/packages/admin/entities/gigs.yaml
@@ -28,7 +28,7 @@ easy_admin:
                 fields:
                     - { type: 'group', css_class: 'col-sm-8', label: 'Basic information', icon: 'pencil' }
                     - { property: 'name', css_class: 'large' }
-                    - { property: 'description', type:  'Hillrange\CKEditor\Form\CKEditorType',css_class: 'large'   }
+                    - { property: 'description', type:  'ckeditor',css_class: 'large'   }
                     - { type: 'divider' }
                     - { property: 'category', type: 'easyadmin_autocomplete' }
                     - { type: 'group', css_class: 'col-sm-8', label: 'Gigs Details', icon: 'cube' }
