--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -1,7 +1,7 @@
 vich_uploader:
     db_driver: orm
 
-    #mappings:
-    #    products:
-    #        uri_prefix: /images/products
-    #        upload_destination: '%kernel.project_dir%/public/images/products'
+    mappings:
+        gig_images:
+            uri_prefix: '%app.path.gig_images%'
+            upload_destination: '%kernel.project_dir%/public/images/gigs'
