--- a/config/packages/admin/entities/category.yml
+++ b/config/packages/admin/entities/category.yml
@@ -20,7 +20,8 @@ easy_admin:
                     - 'gigs'
             form:
                 fields:
-                    - { type: 'group', css_class: 'col-sm-4' }
-                    - { property: 'name', label: 'Label', css_class: 'large', help: 'As displayed on the website (the slug is auto-generated)' }
+                    - { type: 'group', css_class: 'col-sm-12' }
+                    - { property: 'name', label: 'Label', css_class: 'large', help: 'Name of cateory' }
+                    - { property: 'description', type:  'ckeditor',css_class: 'large'   }
                     # if you want to add products when creating categories, add the 'by_reference' option
                     # - { property: 'products', type_options: { by_reference: false } }
