--- a/config/services.yaml
+++ b/config/services.yaml
@@ -2,7 +2,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'en'
-    app.path.gig_images: /uploads/images/gigs
+    app.path.gig_images: /images/gigs
 
 services:
     # default configuration for services in *this* file
@@ -27,3 +27,9 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+
+    pagerfanta.view.default:
+      class: Pagerfanta\View\DefaultView
+      public: false
+      tags: [{ name: pagerfanta.view, alias: default }]
