--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "symfony/twig-bundle": "^3.4",
         "symfony/validator": "^3.4",
         "symfony/yaml": "^3.4",
+        "twig/extensions": "^1.5",
         "vich/uploader-bundle": "^1.7",
         "white-october/pagerfanta-bundle": "^1.1"
     },
