add page checkout

--- a/config/packages/admin/entities/gig_images.yaml
+++ b/config/packages/admin/entities/gig_images.yaml
@@ -7,13 +7,16 @@ easy_admin:
                 fields:
                     - id
                     - { property: 'imageFile', type: 'image', base_path: '%app.path.gig_images%' }
+                    - { property: 'thumbFile', type: 'image', base_path: '%app.path.gig_images%' }
                     - gig
             show:
                 fields:
                     - id
                     - { property: 'imageFile', type: 'image', base_path: '%app.path.gig_images%' }
+                    - { property: 'thumbFile', type: 'image', base_path: '%app.path.gig_images%' }
                     - gig
             form:
                 fields:
                     - { property: 'gig', type: 'easyadmin_autocomplete' }
-                    - { property: 'imageFile', type: 'vich_image', type_options: { required: true } }
+                    - { property: 'imageFile', type: 'vich_image' }
+                    - { property: 'thumbFile', type: 'vich_image' }
