--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,11 @@
     "require": {
         "php": "^7.0.8",
         "ext-iconv": "*",
+        "api-platform/api-pack": "^1.1",
         "easycorp/easyadmin-bundle": "^1.17",
         "egeloen/ckeditor-bundle": "^6.0",
+        "jms/payment-core-bundle": "^1.3",
+        "jms/payment-paypal-bundle": "^1.1",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "^3.4",
         "symfony/console": "^3.4",
