--- a/config/services.yaml
+++ b/config/services.yaml
@@ -3,6 +3,11 @@
 parameters:
     locale: 'en'
     app.path.gig_images: /images/gigs
+    
+jms_payment_paypal:
+    username: your_api_username # not your account username
+    password: your_api_password # not your account password
+    signature: your_api_signature
 
 services:
     # default configuration for services in *this* file
