--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "egeloen/ckeditor-bundle": "^6.0",
         "jms/payment-core-bundle": "^1.3",
         "jms/payment-paypal-bundle": "^1.1",
+        "omines/datatables-bundle": "^0.1.5",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "^3.4",
         "symfony/console": "^3.4",
