--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
     "require-dev": {
         "symfony/debug-bundle": "^3.4",
         "symfony/dotenv": "^3.4",
+        "symfony/maker-bundle": "^1.4",
         "symfony/phpunit-bridge": "^3.4",
         "symfony/web-server-bundle": "^3.4"
     },
