--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -5,3 +5,4 @@ vich_uploader:
         gig_images:
             uri_prefix: '%app.path.gig_images%'
             upload_destination: '%kernel.project_dir%/public/images/gigs'
+            directory_namer: Vich\UploaderBundle\Naming\SubdirDirectoryNamer
