--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -2,7 +2,11 @@ vich_uploader:
     db_driver: orm
 
     mappings:
-        gig_images:
+        gigs:
             uri_prefix: '%app.path.gig_images%'
             upload_destination: '%kernel.project_dir%/public/images/gigs'
-            directory_namer: Vich\UploaderBundle\Naming\SubdirDirectoryNamer
+            directory_namer: gigs.directory_namer
+        gigimages:
+            uri_prefix: '%app.path.gig_images%'
+            upload_destination: '%kernel.project_dir%/public/images/gigs'
+            directory_namer: gigimages.directory_namer
