--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -6,7 +6,9 @@ vich_uploader:
             uri_prefix: '%app.path.gig_images%'
             upload_destination: '%kernel.project_dir%/public/images/gigs'
             directory_namer: gigs.directory_namer
+            delete_on_remove: true
         gigimages:
             uri_prefix: '%app.path.gig_images%'
             upload_destination: '%kernel.project_dir%/public/images/gigs'
             directory_namer: gigimages.directory_namer
+            delete_on_remove: true
