--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,6 +20,8 @@ security:
           form_login:
             login_path: login
             check_path: login
+            always_use_default_target_path: true
+            default_target_path: /admin
           logout: true
           anonymous: ~
 
