--- a/config/packages/datatables.yaml
+++ b/config/packages/datatables.yaml
@@ -1,6 +1,7 @@
 # Latest documentation available at https://omines.github.io/datatables-bundle/#configuration
 datatables:
     # Set options, as documented at https://datatables.net/reference/option/
+#    language_from_cdn:    false
     options:
         lengthMenu : [10, 25, 50, 100, 250, 500, 1000, 2500]
         pageLength: 50
@@ -9,6 +10,7 @@ datatables:
     template_parameters:
         # Example classes to integrate nicely with Bootstrap 3.x
         className: 'table table-striped table-bordered table-hover data-table'
+        columnFilter: "thead"
 
     # You can for example override this to "tables" to keep the translation domains separated nicely
     translation_domain: 'messages'
