--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "jms/payment-paypal-bundle": "^1.1",
         "omines/datatables-bundle": "^0.1.5",
         "sensio/framework-extra-bundle": "^5.1",
+        "sensio/generator-bundle": "^3.1",
+        "sg/datatablesbundle": "^1.0",
         "symfony/asset": "^3.4",
         "symfony/console": "^3.4",
         "symfony/expression-language": "^3.4",
