--- a/config/packages/datatables.yaml
+++ b/config/packages/datatables.yaml
@@ -6,11 +6,12 @@ datatables:
         lengthMenu : [10, 25, 50, 100, 250, 500, 1000, 2500]
         pageLength: 50
         dom: "<'row' <'col-sm-12' tr>><'row' <'col-sm-6'l><'col-sm-6 text-right'pi>>"
+        searching: true
 
     template_parameters:
         # Example classes to integrate nicely with Bootstrap 3.x
         className: 'table table-striped table-bordered table-hover data-table'
-        columnFilter: "thead"
+        columnFilter: "both"
 
     # You can for example override this to "tables" to keep the translation domains separated nicely
     translation_domain: 'messages'
