--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "egeloen/ckeditor-bundle": "^6.0",
         "jms/payment-core-bundle": "^1.3",
         "jms/payment-paypal-bundle": "^1.1",
-        "omines/datatables-bundle": "^0.1.5",
+        "liip/imagine-bundle": "^1.9",
         "sensio/framework-extra-bundle": "^5.1",
         "sensio/generator-bundle": "^3.1",
         "sg/datatablesbundle": "^1.0",
